--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -33,10 +33,11 @@
 
 .funstuff {
 
-  background-color: green;
-  color: #fff;
-  height: 600px;
-  padding-top: 50px;
+  background-color: #222;
+  color: #F5F5F5;
+  height: 100px;
+  margin-top: 50px;
+
 
 }
 
